Migrate to 6.0.11 with Spring Boot 3 and Java 21